# consort-panel

./: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  gnome-doc-utils.make
applets/: Makefile.in
applets/clock/: clock-marshallers.h  clock-resources.h
applets/fish/: Makefile.am  fish-resources.c  fish.c  fish.gresource.xml  org.consort.panel.applet.FishAppletFactory.service.in
applets/notification_area/: Makefile.in  org.consort.panel.applet.NotificationAreaAppletFactory.service.in
applets/wncklet/: window-list.c  window-menu.c  wncklet-resources.c  wncklet.gresource.xml  wncklet.h  workspace-switcher.c
consort-panel/: Makefile.am  Makefile.in  consort-panel-add.in  consort-panel.desktop.in  main.c  nothing.cP  panel-action-protocol.c  panel-action-protocol.h  panel-addto.c  panel-applet-frame.c  panel-background-monitor.c  panel-background-monitor.h  panel-background.c  panel-icon-names.h  panel-layout.c  panel-menu-bar-object.c  panel-menu-bar.h  panel-multiscreen.c  panel-properties-dialog.c  panel-schemas.h  panel-stock-icons.h  panel-toplevel.c  panel-util.c  panel-widget.c  panel.gresource.xml
consort-panel-1.0/: ChangeLog  ChangeLog.pre-git  NEWS  config.h.in  configure  configure.ac
consort-panel-1.0/consort-panel/: applet.c  applet.h  consort-panel.desktop.in.in  menu.c  panel-applet-frame.h  panel-context-menu.c  panel-icon-names.h  panel-menu-bar.c  panel-menu-bar.h  panel-menu-button.c  panel-menu-items.c  panel-modules.c  panel-schemas.h  panel-session.c  panel-test-applets.c  panel-test-applets.gresource.xml  panel-toplevel.c  panel.c  panel.gresource.xml
consort-panel-1.0/data/: Makefile.am  Makefile.in  org.gnome.consort-panel.applet.fish.gschema.xml.in.in  org.gnome.consort-panel.applet.workspace-switcher.gschema.xml.in.in  org.gnome.consort-panel.gschema.xml.in.in  org.gnome.consort-panel.launcher.gschema.xml.in.in  org.gnome.consort-panel.object.gschema.xml.in.in  panel-default-layout.layout
consort-panel-1.0/data/16x16/: Makefile.am  Makefile.in
consort-panel-1.0/data/24x24/: Makefile.in
consort-panel-1.0/data/32x32/: Makefile.am  Makefile.in
consort-panel-1.0/data/48x48/: Makefile.am  Makefile.in
consort-panel-1.0/debian/: changelog  consort-panel-data.install  control  control.in  copyright  libpanel-applet-1-0.symbols  rules
consort-panel-1.0/libpanel-applet/: Makefile.am  Makefile.in  libpanelapplet-4.0.pc.in  panel-applet-factory.c  panel-applet.c
consort-panel-1.0/po/: POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fr.po  fy.po  ga.po  gl.po  gu.po  gv.po  ha.po  he.po  hi.po  hu.po  id.po  ig.po  it.po  ja.po  ka.po  (+41 more)
consort-panel/libpanel-applet-private/: Makefile.am  panel-applet-container.c  panel-applet-container.h
consort-panel/libpanel-util/: Makefile.in  panel-util-types.h
data/: Makefile.am  Makefile.in  org.consort.consort-panel.applet.fish.gschema.xml.in.in  org.consort.consort-panel.applet.window-list.gschema.xml.in.in  org.consort.consort-panel.applet.workspace-switcher.gschema.xml.in.in  org.consort.consort-panel.gschema.xml.in.in  org.consort.consort-panel.launcher.gschema.xml.in.in  org.consort.consort-panel.menu-button.gschema.xml.in.in  org.consort.consort-panel.object.gschema.xml.in.in  org.consort.consort-panel.toplevel.gschema.xml.in.in  org.gnome.consort-panel.applet.window-list.gschema.xml.in.in  org.gnome.consort-panel.menu-button.gschema.xml.in.in  org.gnome.consort-panel.toplevel.gschema.xml.in.in  panel-default-layout.layout
data/22x22/: Makefile.am  Makefile.in
data/24x24/: Makefile.am
data/scalable/: Makefile.am  Makefile.in
debian/: README.Debian  changelog  consort-panel.install  rules  watch
debian/patches/: 03_tasklist_orientation.patch  14_revert_timedate_change.patch  add_menu_separator.patch  combined_context_menu.patch  restore_rightclick.patch  series
doc/: Makefile.in  Transparency.md  panel-keynav.txt
doc/reference/: Makefile.in
help/: Makefile.in
libpanel-applet/: Makefile.am  Makefile.in  libpanelapplet-1.0-uninstalled.pc.in  libpanelapplet-1.0.pc.in  panel-applet.c
man/: Makefile.am  Makefile.in  consort-panel.1
po/: POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hr.po  hu.po  hy.po  id.po  (+52 more)
(+197 files in other folders)
